log/build_2022-06-09_15-02-54/kalman_1d/stdout_stderr.log
running egg_info
writing ../../build/kalman_1d/kalman_1d.egg-info/PKG-INFO
writing dependency_links to ../../build/kalman_1d/kalman_1d.egg-info/dependency_links.txt
writing entry points to ../../build/kalman_1d/kalman_1d.egg-info/entry_points.txt
writing requirements to ../../build/kalman_1d/kalman_1d.egg-info/requires.txt
writing top-level names to ../../build/kalman_1d/kalman_1d.egg-info/top_level.txt
reading manifest file '../../build/kalman_1d/kalman_1d.egg-info/SOURCES.txt'
writing manifest file '../../build/kalman_1d/kalman_1d.egg-info/SOURCES.txt'
running build
running build_py
running install
running install_lib
byte-compiling /home/andrepadilha/kalman_ws/install/kalman_1d/lib/python3.8/site-packages/kalman_1d/teleport_service.py to teleport_service.cpython-38.pyc
  File "/home/andrepadilha/kalman_ws/install/kalman_1d/lib/python3.8/site-packages/kalman_1d/teleport_service.py", line 52
    except rospy.ServiceException, e:
                                 ^
SyntaxError: invalid syntax

byte-compiling /home/andrepadilha/kalman_ws/install/kalman_1d/lib/python3.8/site-packages/kalman_1d/teleport_service (copy).py to teleport_service (copy).cpython-38.pyc
  File "/home/andrepadilha/kalman_ws/install/kalman_1d/lib/python3.8/site-packages/kalman_1d/teleport_service (copy).py", line 52
    except rospy.ServiceException, e:
                                 ^
SyntaxError: invalid syntax

running install_data
copying launch/main.launch.py -> /home/andrepadilha/kalman_ws/install/kalman_1d/share/kalman_1d
running install_egg_info
removing '/home/andrepadilha/kalman_ws/install/kalman_1d/lib/python3.8/site-packages/kalman_1d-0.0.0-py3.8.egg-info' (and everything under it)
Copying ../../build/kalman_1d/kalman_1d.egg-info to /home/andrepadilha/kalman_ws/install/kalman_1d/lib/python3.8/site-packages/kalman_1d-0.0.0-py3.8.egg-info
running install_scripts
Installing teleport_service script to /home/andrepadilha/kalman_ws/install/kalman_1d/lib/kalman_1d
Installing turtlebot3_move script to /home/andrepadilha/kalman_ws/install/kalman_1d/lib/kalman_1d
writing list of installed files to '/home/andrepadilha/kalman_ws/build/kalman_1d/install.log'
